freest/test/prog/valid/functional/SimpleApp/SimpleApp.fst
module SimpleApp where

half : Int -> Int
half x = div x 2

main : Int
main = half (2+2*3)


