freest/test/prog/Invalid/SessionTypes/PartiallyAppliedReceive/PartiallyAppliedReceive.fst
module PartiallyAppliedReceive where

f : ?Int -*-> (Int, Skip)
f = receive
